--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.4",
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-syntax-jsx": "^7.16.0",
+    "next": "^12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.43.4"
   },
   "devDependencies": {
+    "@types/node": "^16.11.7",
+    "@types/react": "^17.0.35",
     "eslint": "7",
-    "eslint-config-next": "12.0.4"
+    "eslint-config-next": "12.0.4",
+    "typescript": "^4.4.4"
   }
 }
