--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/core": "^7.16.0",
     "@babel/plugin-syntax-jsx": "^7.16.0",
     "@chakra-ui/gatsby-plugin": "^2.0.2",
+    "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.7.1",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
