--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11",
     "axios": "^0.24.0",
     "framer-motion": "^4",
+    "jquery": "^3.6.0",
     "next": "^12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
