--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "framer-motion": "^4",
     "jquery": "^3.6.0",
     "next": "^12.0.4",
+    "next-auth": "^3.29.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "sass": "^1.43.4"
   },
   "devDependencies": {
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^16.11.7",
     "@types/react": "^17.0.35",
     "eslint": "7",
